--- a/libro/Introduccion.tex
+++ b/libro/Introduccion.tex
@@ -46,10 +46,10 @@ suelo, normalmente de potencias inferiores a los $\SI{100}{\kilo\watt}$.
 %
 \begin{figure}
 \hfill{}\subfloat[Sistema conectado a red instalado sobre suelo.\label{fig:SistemaSobreSuelo}]{\begin{centering}
-\includegraphics[scale=0.25]{../Fotos/EstructuraEstaticaSuelo}
+\includegraphics[scale=0.25]{../figs/EstructuraEstaticaSuelo}
 \par\end{centering}
 
-}\hfill{}\subfloat[Sistema conectado a red instalado como acristalamiento de un edificio.\label{fig:SistemaEdificacion}]{\includegraphics[scale=0.46]{../Fotos/Torreguil}
+}\hfill{}\subfloat[Sistema conectado a red instalado como acristalamiento de un edificio.\label{fig:SistemaEdificacion}]{\includegraphics[scale=0.46]{../figs/Torreguil}
 
 }\hfill{}
 
@@ -90,7 +90,7 @@ equipo de socorro.
 %
 \begin{figure}
 \begin{centering}
-\includegraphics[scale=0.6]{../Fotos/TelefoniaRural}
+\includegraphics[scale=0.6]{../figs/TelefoniaRural}
 \end{centering}
 
 \caption{Sistema fotovoltaico autónomo alimentando un radioenlace.\label{fig:SistemaRadioenlace}}
@@ -136,11 +136,11 @@ y la desalinización del agua extraída con sistemas de ósmosis inversa.
 %
 \begin{figure}
 \subfloat[Sistema doméstico.\label{fig:SHS}]{\begin{centering}
-\includegraphics[scale=0.73]{../Fotos/er}
+\includegraphics[scale=0.73]{../figs/er}
 \par\end{centering}
 
 }\subfloat[Sistema de bombeo con depósito elevado.\label{fig:Sistema-de-bombeo}]{\begin{centering}
-\includegraphics[scale=0.28]{../Fotos/Bombeo}
+\includegraphics[scale=0.28]{../figs/Bombeo}
 \par\end{centering}
 
 }
